--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                             </div>
                         </div>
 
-                        <div class="about__buttons">
+                        <div class="about__buttons" style="margin-left: 70px;">
                             <a download="" href="packages/pdf/risha.pdf" class="button button--flex">
                                 Download Resume<i class="uil uil-download-alt button__icon"></i>
                             </a>
@@ -592,14 +592,22 @@
             <!--==================== PORTFOLIO 3 ====================-->
         
             <div class="portfolio__content grid swiper-slide">
-                <img src="./packages/images/portfolio2.png" alt="" class="portfolio__img">
+                <img src="./packages/images/website3.png" alt="" class="portfolio__img" style="height: fit-content;width:400px;">
 
                 <div class="portfolio_">
-                    <h3 class="portfolio__title">Brand Design</h3>
-                    <p class="portfolio__description">Tesla Clone is adaptable to all devices, with 
-                        ui components and animated interactions.</p>
+                    <h3 class="portfolio__title">CookWise</h3>
+                    <p class="portfolio__description">I love cooking, a way to express my love for others, a way to relax and de-stress, a way to learn new 
+                        things, and a way to connect with others. But what I experienced from past months living away from 
+                        parents was that its difficult to make a quick snack with few ingredients available at home. So with my 
+                        knowledge and expertise in cooking I want to help people with this issue.
+                        <br> It will:
+                        <br>• Make cooking more accessible and enjoyable for everyone.
+                        <br>• Help people save time and money.
+                        <br>• Encourage people to experiment with new flavours and cuisines.
+                        <br>I hope that more users will join my website and help in making Cookwise the go-to place for recipes, tips, 
+                        and inspiration.</p>
                     <a href="#" class="button button--flex button--small portfolio__button">
-                        Demo
+                        SourceCode
                         <i class="uil uil-arrow-right button__icon"></i>
                     </a>
                 </div>
@@ -630,7 +638,7 @@
                 <div class="project__container container grid">
                     <div class="project__data">
                         <h2 class="project__title">You have a new project?</h2>
-                        <p class="project__description">Contact me now and get discounts on your Web development projects.</p>
+                        <p class="project__description">Contact me!</p>
                         <a href="#contact" class="button button--flex button--white">Contact me
                             <i class="uil uil-message project__icon button__icon"></i>
                         </a>
