--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <!--==================== CSS ====================-->
         <link rel="stylesheet" href="./packages/css/styles.css">
 
-        <title>Risha</title>
+        <title>Risha's Portfolio</title>
+        <link rel="icon" type="image/x-icon" href="packages/images/rishfavicon.png">
     </head>
     <body>
         <!--==================== HEADER ====================-->
