--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         </div>
 
                         <div class="home__data">
-                            <h1 class="home__title">Hello, I'am Risha</h1>
+                            <h1 class="home__title">Hello, I am Risha</h1>
                             <h3 class="home__subtitle">Web Developer</h3>
                             <p class="home__description"></p>
                             <a href="#contact" class="button button--flex home__button">
@@ -148,7 +148,7 @@
                         </div>
 
                         <div class="about__buttons" style="margin-left: 70px;">
-                            <a download="" href="packages/pdf/risha.pdf" class="button button--flex">
+                            <a download="" href="packages/pdf/risha resume.pdf.pdf" class="button button--flex">
                                 Download Resume<i class="uil uil-download-alt button__icon"></i>
                             </a>
                         </div>
