--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                         </div>
 
                         <div class="about__buttons" style="margin-left: 70px;">
-                            <a download="" href="packages/pdf/risha resume.pdf.pdf" class="button button--flex">
+                            <a download="" href="packages/pdf/risha_resume.pdf" class="button button--flex">
                                 Download Resume<i class="uil uil-download-alt button__icon"></i>
                             </a>
                         </div>
